[gd_scene load_steps=4 format=3 uid="uid://dtbo86ccdr05e"]

[ext_resource type="Script" path="res://roller.gd" id="1_kti21"]
[ext_resource type="PackedScene" uid="uid://c5j6yc30a0sip" path="res://cost.tscn" id="2_wd7is"]

[sub_resource type="SystemFont" id="SystemFont_bufg4"]
font_names = PackedStringArray("Cambria")
subpixel_positioning = 0

[node name="roller_l" type="Node2D"]
script = ExtResource("1_kti21")

[node name="h" type="HBoxContainer" parent="."]
offset_left = -71.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 55.0

[node name="p" type="PanelContainer" parent="h"]
layout_mode = 2
size_flags_vertical = 4

[node name="m" type="MarginContainer" parent="h/p"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_right = 4

[node name="cost" parent="h/p/m" instance=ExtResource("2_wd7is")]
custom_minimum_size = Vector2(27, 0)
layout_mode = 2
columns = 3
simplified = true
font_size_override = 10

[node name="v" type="VBoxContainer" parent="h"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="tile" type="MarginContainer" parent="h/v"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2

[node name="anchor" type="MarginContainer" parent="h/v/tile"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="reroll" type="Button" parent="h/v"]
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_bufg4")
theme_override_font_sizes/font_size = 12
text = "Reroll"

[connection signal="focus_entered" from="h/v/reroll" to="." method="_on_reroll_focus_entered"]
[connection signal="focus_exited" from="h/v/reroll" to="." method="_on_reroll_focus_exited"]
[connection signal="mouse_entered" from="h/v/reroll" to="." method="_on_reroll_mouse_entered"]
[connection signal="mouse_exited" from="h/v/reroll" to="." method="_on_reroll_mouse_exited"]
[connection signal="pressed" from="h/v/reroll" to="." method="_on_reroll_pressed"]
